--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3735,7 +3735,7 @@ input, select, textarea {
 					}
 
 				#nav ul.links li.active {
-					background-color: #ffffff;
+					background-color: #ffeb47;
 				}
 
 					#nav ul.links li.active a {
